Next version
  - Remove mixer and VGA capture test modes from integration device. Update
    integration device version number. Convert hardcoded magic constants used
    in IG into constants in iglib.h which is now shared explicitly with the
    iglib.h in DOSLIB. Add integration device interface to allow the guest
    to read and set the CPU cycle count of the emulator. (joncampbell123).
  - Fix INT 10h AH=0Eh bug where printing BEL triggered screen scroll up if
    cursor beyond the last line. Fix for the Elder Scrolls Arena installer.
    (joncampbell123).
  - FAT filesystem driver (for disk images): If Elder Scrolls Arena calls
    INT 21h to find files named *.65 (such as STATES.65) with an attribute mask
    of 0xA (VOLUME LABEL | HIDDEN), ignore the VOLUME LABEL bit and scan
    normally. The 0xA value is leftover from a divide operation used to make
    the file name and is technically a bug in the game, though that happens
    to work on real MS-DOS and the DOSBox/DOSBox-X local folder support code
    anyway. This fix allows Elder Scrolls Arena to run from a mounted disk
    image. (joncampbell123).
  - FAT filesystem driver (for disk images): If Elder Scrolls Arena calls
    INT 21h to find SAVEGAME.00 (yes, a specific name for some reason) with
    an attribute mask of 0x7C (which represents... um... what?), ignore the
    VOLUME LABEL bit so that players can load their saved games from the
    menu instead of being told that the saved game that is clearly there on
    the screen does not exist. What other weird random values of CX attribute
    mask does this game use? (joncampbell123).
  - PCI bus improvements : Allow device to see full size access (smunaut)
  - Fix build error of SDL1 version on ArchLinux (possibly gcc-15) (maron2000)
  - Enable building DOSBox-X on older macOS versions and add instructions
    (maron2000)
  - Add code page 951 in dialog box (1abcd)
  - Fix failure of create/opening a temporary file for piping (maron2000)